// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders 1`] = `
.c3 {
  margin-bottom: 2px;
  text-align: center;
}

.c1 {
  font-size: 18px;
  margin: 0px;
  margin-bottom: 12px;
  color: #384046;
}

.c0 {
  display: block;
}

.c0 a {
  color: #2d9ee4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  min-height: 36px;
  line-height: inherit;
  font-family: inherit;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  border-color: #dde1e4;
  -webkit-transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  font-size: 18px;
  margin: 0px;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  width: 100%;
  color: inherit;
  background-color: transparent;
}

.c4::-ms-clear {
  display: none;
}

.c4::-ms-clear {
  display: none;
}

.c4::-ms-clear {
  display: none;
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: none;
  border-color: #2d9ee4;
  box-shadow: 0 0 0 2px #add9f5;
}

.c4[type='select'] {
  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23606e77' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
  background-size: .5rem;
}

.c4[type='textarea'] {
  resize: vertical;
}

<label
  className="text c0 c1"
  color="black"
  fontSize={2}
  id="renders"
>
  <div
    className="c2 c3"
  >
    Renders
  </div>
  <input
    className="c4"
    name="renders"
    type="text"
  />
</label>
`;

exports[`Field with error 1`] = `
.c3 {
  margin-bottom: 2px;
  text-align: center;
}

.c5 {
  font-size: 16px;
  margin: 0px;
  margin-left: 6px;
  margin-top: 0px;
  margin-bottom: 0px;
  color: #b52434;
}

.c1 {
  font-size: 18px;
  margin: 0px;
  margin-bottom: 12px;
  color: #384046;
}

.c0 {
  display: block;
}

.c0 a {
  color: #2d9ee4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  min-height: 36px;
  line-height: inherit;
  font-family: inherit;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  border-color: #dde1e4;
  -webkit-transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  font-size: 18px;
  margin: 0px;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  width: 100%;
  color: inherit;
  background-color: transparent;
}

.c6::-ms-clear {
  display: none;
}

.c6::-ms-clear {
  display: none;
}

.c6::-ms-clear {
  display: none;
}

.c6::-ms-clear {
  display: none;
}

.c6:focus {
  outline: none;
  border-color: #2d9ee4;
  box-shadow: 0 0 0 2px #add9f5;
}

.c6[type='select'] {
  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23606e77' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
  background-size: .5rem;
}

.c6[type='textarea'] {
  resize: vertical;
}

.c4 {
  font-weight: normal;
}

.c4:before {
  content: '— ';
}

<label
  className="text c0 c1"
  color="black"
  fontSize={2}
  id="error"
>
  <div
    className="c2 c3"
  >
    Error
    <p
      className="error c4 c5"
    >
      error message
    </p>
  </div>
  <input
    className="c6"
    name="error"
    type="text"
  />
</label>
`;
